--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "request": "^2.72.0",
     "socket.io": "^1.4.4",
     "stompit":"^0.23.0",
+    "moment":"^2.14.1",
+    "connect-redis":"^3.1.0",
     "wechat-api":"1.28.0",
     "wechat-oauth":"1.1.1",
     "wechat-enterprise":"0.1.1"
