--- a/client/package.json
+++ b/client/package.json
@@ -121,7 +121,9 @@
     "font-awesome": "4.6.3",
     "font-awesome-webpack":"^0.0.4",
     "jquery": "3.1.0",
-    "tether":"1.3.4"       
+    "tether":"1.3.4",
+
+    "weixin-js-sdk":"^1.0.7"       
   },
   "devDependencies": {
     "@types/core-js": "^0.9.28",
