--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "connect-redis":"^3.1.0",
     "wechat-api":"1.28.0",
     "wechat-oauth":"1.1.1",
+    "wechat-pay":"^0.2.4",
     "wechat-enterprise":"0.1.1"
   },
   "scripts": {
