--- a/package.json
+++ b/package.json
@@ -5,18 +5,20 @@
   "author": "hugh",
   "dependencies": {
     "body-parser": "^1.15.2",
-    "express": "^4.14.0",   
+    "connect-redis": "^3.1.0",
+    "express": "^4.14.0",
     "express-session": "^1.13.0",
-    "serve-favicon":"2.3.0",
+    "ipware": "0.0.8",
+    "moment": "^2.14.1",
     "request": "^2.72.0",
+    "request-ip": "^1.2.1",
+    "serve-favicon": "2.3.0",
     "socket.io": "^1.4.4",
-    "stompit":"^0.23.0",
-    "moment":"^2.14.1",
-    "connect-redis":"^3.1.0",
-    "wechat-api":"1.28.0",
-    "wechat-oauth":"1.1.1",
-    "wechat-pay":"^0.2.4",
-    "wechat-enterprise":"0.1.1"
+    "stompit": "^0.23.0",
+    "wechat-api": "1.28.0",
+    "wechat-enterprise": "0.1.1",
+    "wechat-oauth": "1.1.1",
+    "wechat-pay": "^0.2.4"
   },
   "scripts": {
     "start": "node app.js"
